# main-app/main-app/v1/api/ingredients.py
@@ -2,6 +2,9 @@
 from __future__ import absolute_import, print_function
 
 from flask import request, g
+from ..models import Ingredients as In
+from ..helpers import authorize
+import uuid
 
 from . import Resource
 from .. import schemas
@@ -10,26 +13,55 @@ from .. import schemas
 class Ingredients(Resource):
 
     def get(self):
-        print(g.headers)
-        print(g.args)
+        authorize(g.headers)
+        data = request.get_json()
 
-        return {}, 200, None
+        ingredient = In.select().where(In.uuid ==
+                                       data.get('uuid')).dicts().get()
+        if not ingredient:
+            return {"message": "Ingredient not found"}, 404, None
+        return ingredient, 200, None
 
     def post(self):
-        print(g.json)
-        print(g.headers)
 
-        return {}, 200, None
+        authorize(g.headers)
+        data = request.get_json()
+
+        print(data, flush=True)
+        In.create(
+            uuid=str(uuid.uuid4()),
+            name=data.get('name'),
+            image=data.get('image')
+        )
+        return {"message": "Success"}, 200, None
 
     def put(self):
-        print(g.json)
-        print(g.headers)
-        print(g.args)
+        authorize(g.headers)
+        data = request.get_json()
 
-        return {}, 200, None
+        ingredient = In.select().where(
+            In.uuid == data.get('uuid')).get()
+        if not ingredient:
+            return {"message": "Ingredient not found"}, 404, None
+
+        ingredient.name = 'new name'
+        ingredient.image = 'new image'
+        ingredient.save()  # Will do the SQL update query.
+        # print(g.json)
+        # print(g.headers)
+        # print(g.args)
+
+        return {"message": "Success"}, 200, None
 
     def delete(self):
-        print(g.headers)
-        print(g.args)
+        authorize(g.headers)
+        data = request.get_json()
+
+        ingredient = In.get(In.uuid == data.get('uuid'))
+        if not ingredient:
+            return {"message": "Ingredient not found"}, 404, None
+        ingredient.delete_instance()
+        # print(g.headers)
+        # print(g.args)
 
         return {}, 200, None
