# main-app/main-app/v1/api/ingredients_list.py
@@ -2,6 +2,7 @@
 from __future__ import absolute_import, print_function
 
 from flask import request, g
+from ..models import Ingredients
 
 from . import Resource
 from .. import schemas
